<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.main.fragments.AboutFragment">

        <ImageView
            android:id="@+id/img_app_logo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/app_logo_desc"
            android:src="@mipmap/ic_launcher_round"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.45" />

        <TextView
            android:id="@+id/app_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="21sp"
            android:textColor="@color/grey_900"
            android:textStyle="bold"
            android:textAlignment="center"
            android:padding="@dimen/spacing_medium"
            app:layout_constraintTop_toBottomOf="@id/img_app_logo"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_desc"
            android:textSize="16sp"
            android:textColor="@color/grey_900"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@id/app_name"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
